<package>
  <name>mw</name>
  <version>0.0.1</version>
  <description>Entdecker Packages</description>
  <maintainer email="marco@sonic.net">Marco Walther</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mw_sawppy</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

